--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,11 @@
     "orientation": "landscape",
     "icons": [
         {
+        "src": "Game/Assets/images/icons/maskable_icon.png",
+        "sizes": "538x538",
+        "purpose": "any maskable"
+        },
+        {
         "src": "Game/Assets/images/icons/windows11/SmallTile.scale-100.png",
         "sizes": "71x71"
         },
