--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/node": "^12.7.1",
     "@types/ws": "^6.0.2",
     "electron": "^12.0.2",
+    "oimo": "^1.0.9",
+    "oimophysics": "^1.2.2",
     "webrtc-adapter": "^8.1.0",
     "websocket": "^1.0.32",
     "ws": "^7.5.5"
